--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,24 @@ body{
 }
 
 h1{
-    margin-top: 0px;
+    color: #66BFBF;
+    font-size: 5.625rem;
+    /*line-height: 4;*/
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    
 
 }
 
 h2{
+    color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
 }
 
 h3{
+    color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
 }
 .top-container{
@@ -32,6 +40,14 @@ h3{
     
 }
 
+.skill-row{
+    width: 50%; 
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+
+}
+
 .pro {
     text-decoration: underline;
 }
@@ -46,5 +62,22 @@ h3{
     position: absolute;
     left: 300px;
     bottom: 300px;
+}
+
+img{
+    width: 25%;
+}
+
+.code-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.chilli-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+    
 }
 
