--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    color: #40514E ;
     margin:0;
     text-align: center;
     font-family: 'Merriweather', serif;
@@ -18,13 +19,37 @@ h2{
     color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
-    font-weight: normal;
+    font-weight: 900;
+    padding-bottom: 10px;
 }
 
 h3{
     color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
 }
+
+p {
+    line-height: 2;
+}
+
+hr{
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
+
+a{
+    color:#11999e;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #EAF6F6;
+}
+
 .top-container{
     background-color: #D8C292;
     position: relative;
@@ -33,40 +58,51 @@ h3{
 }
 
 .middle-container{
-   
+   margin: 100px 0;
 }
 
 .bottom-container{
-    
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
 }
 
 .skill-row{
     width: 50%; 
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
-
 }
 
 .pro {
     text-decoration: underline;
 }
 
+.intro {
+    width: 30%;
+    margin: auto; 
+}
+
+.contact-me {
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.copyright {
+    color: #EAF6F6;
+    font-size: .75rem;
+    padding: 20px 0;
+}
+
 .top-cloud{
     position: absolute;
     right: 300px; 
-    top: 50px;
+    top: 40px;
 }
 
 .bottom-cloud{
     position: absolute;
-    left: 300px;
+    left: 250px;
     bottom: 300px;
-}
-
-img{
-    width: 25%;
-}
+} 
 
 .code-img {
     width: 25%;
@@ -80,4 +116,35 @@ img{
     margin-left: 30px;
     
 }
+
+.btn {
+    background: #11CDD4;
+    background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+    background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #FFFFFF;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+ 
+    font-weight: 100;
+ 
+ }
+ 
+ .btn:hover {
+    background: #30E3CB;
+    background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
+    text-decoration: none;
+ }
+
 
